syntax = "proto3";

service UserService {
    rpc getUser(UserId) returns (User) {}
    rpc create(User) returns (User) {}
}

message Empty {}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
}

message Users {
    repeated User users = 1;
}

message UserId {
    string id = 1;
}
